[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wiktextract"
version = "1.99.7"
description = "Wiktionary dump file parser and multilingual data extractor"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Tatu Ylonen", email = "ylo@clausal.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"
dependencies = [
    "importlib_resources; python_version < '3.10'",
    "levenshtein",
    "nltk",
    "wikitextprocessor @ git+https://github.com/tatuylonen/wikitextprocessor.git",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "nose2[coverage_plugin]",
    "ruff",
    "tomli; python_version <= '3.10'",  # for coverage parsing TOML file
]

[project.scripts]
wiktwords = "wiktextract.wiktwords:main"

[project.urls]
homepage = "https://github.com/tatuylonen/wiktextract"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
exclude = ["languages", "overrides", "tests", "tools", "usertools"]

[tool.setuptools.package-data]
wiktextract = [
    "data/*/*",
    "py.typed",
]

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
omit = ["tests/*"]

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80
select = [
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle warning
]
