[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wiktextract"
version = "1.99.7"
description = "Wiktionary dump file parser and multilingual data extractor"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Tatu Ylonen", email = "ylo@clausal.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "levenshtein",
    "nltk",
    "pydantic",
    "wikitextprocessor @ git+https://github.com/tatuylonen/wikitextprocessor.git",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "mypy",
    "ruff",
]

[project.scripts]
wiktwords = "wiktextract.wiktwords:main"

[project.urls]
homepage = "https://github.com/tatuylonen/wiktextract"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
wiktextract = [
    "data/*/*",
    "py.typed",
]

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
omit = [
    "tests/*",
    "src/wiktextract/taxondata.py",  # huge file
]

[tool.coverage.html]
directory = "_site/htmlcov"

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle warning
]

[tool.ruff.lint.per-file-ignores]
"src/wiktextract/taxondata.py" = ["E501"]
"src/wiktextract/tags.py" = ["E501"]
"src/wiktextract/table_headers_heuristics_data.py" = ["E501"]
# ignore long line rule in tests because spaces before HTML tag are
# parsed as "preformatted" node
"tests/*" = ["E501"]

[tool.mypy]
mypy_path = "typestubs"
python_version = "3.10"

[[tool.mypy.overrides]]
module = "importlib_resources.*"
ignore_missing_imports = true
